# docx-git-extension

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  main.rs
src/filters/: clean.rs  mod.rs  smudge.rs
src/post_commit/: mod.rs  post_commit.rs
src/utils/: cli.rs  mod.rs  utils.rs
tests/: integration_test.rs  mod.rs
tests/common/: mod.rs
tests/filters/: clean.rs  smudge.rs
tests/fixtures/static_files/: pre-push
tests/fixtures/static_files/docx/: test_doc.docx
tests/fixtures/static_files/pointer/: test_doc.docx  test_doc_pointer.txt
tests/post_commit/: mod.rs  post_commit.rs
tests/utils/: utils.rs
