[package]
name = "docx_git_extension"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20.2"
zip = "0.6"
chrono = "0.4"
sha2 = "0.10"
tempfile = "3"
clap = { version = "4.0.27", features = ["derive"] }
log = "0.4"
flexi_logger = "0.29"
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2"
